--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
 
   <header class="navbar">
-    <a href="">Logo</a>
+    <a href="#">Logo</a>
     <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Contact</a>
+      <a href="#">Home</a>
+      <a href="#">Contact</a>
     </nav>
   </header>
 
@@ -32,17 +32,17 @@
   
           <div class="image-item">
           <img src="HTML.jpg" alt="Bilde av kurslokalet"width="400" height="400">
-          <h4>Photo by: Unsplash.com</h4>
+          <h5><a href="#">Photo by: unsplash.com</a></h5>
           </div>
   
           <div class="image-item">
           <img src="Unsplash 1.jpg" alt="Bilde av kurslokalet"width="400" height="400">
-          <h4>Photo: Unsplash.com</h4>
+          <h5><a href="#">Photo by: Unsplash.com</a></h5>
           </div>
 
           <div class="image-item">
             <img src="Unsplash 2.jpg" alt="Bilde av kurslokalet"width="400" height="400">
-            <h4>Photo: Unsplash.com</h4>
+            <h5><a href="#">Photo by: Unsplash.com</a></h5>
             </div>
 
             
